css/resume.css
body {
    background-image: url("../images/resume_background.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    margin: 0px auto;
}

.header {
    margin: 30px auto 10px auto;
    padding: 10px;
    width: 500px;

    font-family: 'Droid Sans', sans-serif;
    font-style: normal;
    font-weight: 500;
    letter-spacing: 0.08em;
    line-height: 2em;
}
.header h1 {
    font-size: 375%;
}

.resume {
    margin: 0px auto;
    width: 600px;
    height: 800px;
}

